[metadata]
name = gem-tools
description-file = README.md
description = Tools for working with multimodal corpora annotated using the Genre and Multimodality model
url = https://github.com/thiippal/gem-tools
author = Tuomo Hiippala
author-email = tuomo.hiippala@helsinki.fi

[bdist_wheel]
universal = 1
